k8s/kubernetes-postgres-config.template.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
    role: service
  name: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  type: NodePort
  selector:
    name: postgres

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
        - name: postgres
          image: ${DOCKER_REGISTRY}/visual/postgres:9.5.3
          resources:
            requests:
              memory: 300Mi
            limits:
              memory: 300Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      imagePullSecrets:
        - name: docker-dev
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-storage
