k8s/kubernetes-vizzy-config.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vizzy
spec:
  rules:
  - host: ${VIZZY_URI}
    http:
      paths:
      - backend:
          serviceName: vizzy
          servicePort: 3000

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: vizzy
    role: service
  name: vizzy
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: vizzy

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vizzy
spec:
  replicas: ${VIZZY_REPLICA_PODS}
  template:
    metadata:
      labels:
        name: vizzy
    spec:
      containers:
        - name: visual
          image: ${DOCKER_REGISTRY}/visual/vizzy:${VIZZY_VERSION}
          resources:
            requests:
              memory: ${VIZZY_REQUESTS_MEMORY}
            limits:
              memory: ${VIZZY_LIMITS_MEMORY}
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: visual-data
              mountPath: /app/public/visual_images
      imagePullSecrets:
        - name: docker-dev
      volumes:
        - name: visual-data
          persistentVolumeClaim:
            claimName: visual-automation-home
